--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
 </head>
 <body>
+    
     <div class="grd-container">
         <div class="numDisplay">
-            <div class="chainDisplay">51maxchar</div>
-            <div class="mainDisplay">14maxchar5454545454545</div>
+            <div class="chainDisplay"></div>
+            <div class="mainDisplay"></div>
         </div>
 
         
-        <div class="btn oPercent">%</div>
-        <div class="btn oSqrt">√</div>
-        <div class="btn CE">CE</div>
-        <div class="btn C">C</div>
+        <div class="btn oANS">ANS</div>
+        <div class="btn CE">C</div>
+        <div class="btn C">CE</div>
 
         <div class="btn MRC">MRC</div>
         <div class="btn M-">M-</div>
@@ -55,14 +55,6 @@
 
 
 
-<script type="text=javascript" src="Assets/Javascript/index.js"></script>
+<script type="text/javascript" src="Assets/Javascript/index.js"></script>
 </body>
-
-
-
-
-
-
-
-
 </html>
