Bouncing number circles
cool canvas animation with minor physics simulation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 </head>
 <body>
-
+    <div class="canvWrap">
+        <canvas id="canv"></canvas>
+    </div>
 
     <div class="grd-container">
         <div class="numDisplay">
@@ -53,6 +55,8 @@
 
         
     </div>
+    <div class="AnimationOff">Turn Off Animation</div>
+
 
     
 
