Bouncing circles until operator is pressed
Whenever you press a number a circle appears on canvas that can interact with other circles based on operators, optionally can be turned off

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         
     </div>
-    <div class="AnimationOff">Turn Off Animation</div>
+    <div class="AnimationOff">Turn Off Animation, I just wanted to do some calculations!</div>
 
 
     
